--- a/Calculatrice/src/vue/Sample.fxml
+++ b/Calculatrice/src/vue/Sample.fxml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="454.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlleur.SampleController">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="454.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlleur.SampleController">
    <children>
-      <VBox prefHeight="400.0" prefWidth="435.0">
+      <VBox prefHeight="400.0" prefWidth="435.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
             <Label alignment="CENTER" prefHeight="36.0" prefWidth="435.0" text="Calculatrice 2000">
                <VBox.margin>
                   <Insets left="30.0" />
                </VBox.margin>
             </Label>
-            <TextArea fx:id="ecran" prefHeight="55.0" prefWidth="435.0">
+            <TextField fx:id="ecran" prefHeight="25.0" prefWidth="402.0">
+               <padding>
+                  <Insets top="75.0" />
+               </padding>
                <VBox.margin>
                   <Insets left="15.0" />
-               </VBox.margin></TextArea>
+               </VBox.margin>
+            </TextField>
             <Label alignment="CENTER" prefHeight="30.0" prefWidth="435.0" text="zone de calcul :">
                <VBox.margin>
                   <Insets left="30.0" />
